--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
   background-color: #151315;
   color: rgba(255, 255, 255, 0.6);
 }
+.text_gradient {
+  font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
