--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,20 @@ body {
   background: linear-gradient(#fff 0 0) border-box;
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
 }
+
+.cross__gradient {
+  position: relative;
+}
+
+.cross__gradient::before {
+  z-index: -5;
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: 16px;
+  border: 2px solid transparent; /*2*/
+  background: linear-gradient(45deg, #00f2b1, #db00fb, #ff6000) border-box;
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
