--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,13 @@ a:active {
   mask-composite: exclude;
 }
 
+.partner::before {
+  content: 'send us a message';
+  background-image: -webkit-linear-gradient(45deg, #db00fb, #ff6200);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .message {
   position: relative;
   padding: 6px 8px;
