--- a/src/index.css
+++ b/src/index.css
@@ -80,14 +80,14 @@ a:active {
 }
 
 .why3::before {
-  content: 'Get SDK';
+  content: 'Get SDK 🡪';
   background-image: -webkit-linear-gradient(45deg, #db00fb, #ff6200);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .text1::before {
-  content: 'Developer docs';
+  content: 'Developer docs 🡪';
   background-image: -webkit-linear-gradient(45deg, #db00fb, #ff6200);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
